WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75018
Don't recreate scrollbar layers whenever the frame view size changes
https://bugs.webkit.org/show_bug.cgi?id=75018
Summary
Don't recreate scrollbar layers whenever the frame view size changes
Anders Carlsson
Reported
2011-12-21 11:20:17 PST
Don't recreate scrollbar layers whenever the frame view size changes
Attachments
Patch
(2.92 KB, patch)
2011-12-21 11:24 PST
,
Anders Carlsson
simon.fraser
: review-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-12-21 11:24:56 PST
Created
attachment 120197
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-21 11:25:54 PST
Attachment 120197
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource It seems that I cannot create a rebase-apply directory, and I wonder if you are in the middle of patch application or another rebase. If that is not the case, please rm -fr /mnt/git/webkit-style-queue/.git/rebase-apply and run me again. I am stopping in case you still have something valuable there. rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 158. If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2011-12-21 11:26:42 PST
Comment on
attachment 120197
[details]
Patch You should fix m_layerForScrollCorner too.
Anders Carlsson
Comment 4
2011-12-21 11:29:07 PST
Committed
r103419
: <
http://trac.webkit.org/changeset/103419
>
James Robinson
Comment 5
2011-12-21 13:40:28 PST
Looks good to me too, thanks for fixing this!
Ryosuke Niwa
Comment 6
2011-12-22 10:03:57 PST
It appears that this patch caused compositing/iframes/scrolling-iframe.html to fail on Chromium:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=compositing%2Fiframes%2Fscrolling-iframe.html
James Robinson
Comment 7
2011-12-22 10:34:11 PST
It looks like it just flipped the order of the horizontal and vertical scrollbar layers in the GraphicsLayer tree on this test, so it just needs a rebaseline.
Ryosuke Niwa
Comment 8
2011-12-22 10:39:13 PST
(In reply to
comment #7
)
> It looks like it just flipped the order of the horizontal and vertical scrollbar layers in the GraphicsLayer tree on this test, so it just needs a rebaseline.
Yeah, we just figured that out. Will do rebaseline in a minute.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug