Don't recreate scrollbar layers whenever the frame view size changes https://bugs.webkit.org/show_bug.cgi?id=75018

Reviewed by Darin Adler and Simon Fraser.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateOverflowControlsLayers):

Canonical link: https://commits.webkit.org/91762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103419 268f45cc-cd09-0410-ab3c-d52691b4dbfc